test del controller ContractController